--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -856,7 +856,7 @@ services
   line-height: 50px;
 } 
 
-
+/*new changes , flex  to the cards
 /*
 ---------------------------------------------
 upcoming services
