--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,13 +222,13 @@ header
 
 /* Background Header */
 .background-header {
-  background-color: #fff;
-  height: 80px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  background-color: rgba(230, 223, 223, 0.74) !important;
+  height: 80px !important;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  box-shadow: 0 0 10px rgba(0,0,0,0.15) !important;
 }
 
 .background-header .main-nav .nav li a,
@@ -535,7 +535,7 @@ header
   }
   /* Display the hamburger menu icon */
   .header-area .menu-trigger {
-    display: block ;
+    display: block !important ;
   }
   /* Hide the overflow of the navigation menu */
   .header-area .main-nav {
@@ -586,7 +586,7 @@ header
     top: 0px;
     width: 100%;
     box-shadow: none;
-    height: 0px;
+    height: auto;
     transition: all 0s;
   }
   .header-area .main-nav .nav li.submenu ul li a {
@@ -1268,188 +1268,7 @@ section.heading-page h2 {
 upcoming services page
 ---------------------------------------------
 */
-/*
-section.meetings-page {
-  background-image: url(../images/vecteezy_seamless-pattern-with-building-elements-outline-vector_14531956.jpg);
-  background-position: center center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 140px;
-  padding-bottom: 0px;
-}
 
-section.meetings-page .filters {
-  text-align: center;
-  margin-bottom: 60px;
-}
-
-section.meetings-page .filters li {
-  font-size: 13px;
-  color: #a12c2f;
-  background-color: #fff;
-  padding: 11px 30px;
-  display: inline-block;
-  border-radius: 22px;
-  font-weight: 600;
-  text-transform: uppercase;
-  transition: all .3s;
-  cursor: pointer;
-  margin: 0px 3px;
-}
-
-section.meetings-page .filters ul li.active,
-section.meetings-page .filters ul li:hover {
-  background-color: #a12c2f;
-  color: #fff;
-}
-
-section.meetings-page .pagination {
-  text-align: center;
-  width: 100%;
-  margin-top: 30px;
-  display: inline-block;
-}
-
-section.meetings-page .pagination ul li {
-  display: inline-block;
-}
-
-section.meetings-page .pagination ul li a {
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
-  border-radius: 10px;
-  color: #1f272b;
-  display: inline-block;
-  text-align: center;
-  line-height: 40px;
-  font-weight: 600;
-  font-size: 15px;
-  transition: all .3s;
-}
-
-section.meetings-page .main-button-red {
-  text-align: center;
-}
-
-section.meetings-page .main-button-red a {
-  padding: 12px 60px;
-  text-align: center;
-  margin-top: 30px;
-}
-
-section.meetings-page .pagination ul li.active a,
-section.meetings-page .pagination ul li a:hover {
-  background-color: #a12c2f;
-  color: #fff;
-}
-
-.meeting-single-item .thumb {
-  position: relative;
-}
-
-.meeting-single-item .thumb img {
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-}
-
-.meeting-single-item .thumb .price {
-  position: absolute;
-  left: 20px;
-  top: 20px;
-}
-
-.meeting-single-item .thumb .price span {
-  font-size: 16px;
-  color: #2b1f1f;
-  font-weight: 600;
-  background-color: rgba(250,250,250,0.9);
-  padding: 7px 12px;
-  border-radius: 10px;
-}
-
-.meeting-single-item .down-content {
-  background-color: #fff;
-  padding: 40px;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-
-
-.meeting-single-item .down-content h4 {
-  font-size: 22px;
-  color: #1f272b;
-  font-weight: 600;
-  display: inline-block;
-  margin-bottom: 15px;
-}
-
-.meeting-single-item .down-content h5 {
-  font-size: 18px;
-  color: #1f272b;
-  font-weight: 700;
-  display: inline-block;
-  margin-bottom: 15px;
-}
-
-.meeting-single-item .down-content p {
-  color: #1f272b;
-  font-size: 14px;
-}
-
-.meeting-single-item .down-content p.description {
-  margin-top: 40px;
-  padding-top: 40px;
-  border-top: 1px solid #eee;
-  margin-bottom: 40px;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #eee;
-}
-
-.meeting-single-item .down-content .share {
-  margin-top: 40px;
-  padding-top: 40px;
-  border-top: 1px solid #eee;
-}
-
-.meeting-single-item .down-content .share h5 {
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 0px;
-}
-
-.meeting-single-item .down-content .share ul li {
-  display: inline;
-}
-
-.meeting-single-item .down-content .share ul li a {
-  font-size: 14px;
-  color: #1f272b;
-  transition: all .3s;
-}
-
-.meeting-single-item .down-content .share ul li a:hover {
-  color: #f5a425;
-}
-.meetings-page .meeting-item .price span{
-  font-size: 16px;
-  color: #2b1f1f;
-  font-weight: 600;
-  background-color: rgba(250,250,250,0.9);
-  padding: 7px 12px;
-  border-radius: 10px;
-}
-.meetings-page .meeting-item .down-content p {
-  font-size: 16px;
-  color: #2b1f1f;
-  font-weight: 600;
-  background-color: rgba(250,250,250,0.9);
-  padding: 7px 12px;
-  border-radius: 10px;
-  margin: auto  ;
-}
-*/
 .upcoming-services-page {
   padding-top: 140px;
   background-image: url(../images/vecteezy_seamless-pattern-with-building-elements-outline-vector_14531956.jpg);
@@ -1458,82 +1277,7 @@ section.meetings-page .pagination ul li a:hover {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.card-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  gap: 20px;
-  width: 80%;
-  height: 80%;
-  margin: 0 auto;
-  
-}
 
-.card {
-  position: relative;
-}
-
-.card img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-.card-content {
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.price-tag {
-  position: absolute;
-  top: -20px;
-  right: -20px;
-  padding: 10px;
-  background-color: #f00;
-  color: #fff;
-  border-radius: 50%;
-  font-size: 18px;
-  font-weight: bold;
-}
-.service {
-  padding: 80px 0;
-  background-color: #f9fafc;
-}
-
-.service-item {
-  background-color: #fff;
-  border-bottom-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  padding-bottom: 15px;
-}
-
-.service-item__image {
-  position: relative;
-  flex-basis: 30%;
-  border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-}
-
-.service-item__image img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.price-tag {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background-color: #ef5350;
-  color: #ffffff;
-  padding: 10px;
-  border-radius: 50%;
-  font-size: 18px;
-}
 .upcoming-services-page .filters {
   text-align: center;
   margin-bottom: 60px;
@@ -1558,7 +1302,6 @@ section.meetings-page .pagination ul li a:hover {
   background-color: #a12c2f;
   color: #fff;
 }
-
 
 
 .upcoming-services-page .main-button-red {
@@ -1662,6 +1405,82 @@ section.meetings-page .pagination ul li a:hover {
 .main-button-red a:hover {
   background-color: #f5a425;
   color: #ffffff;
+}
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  width: 80%;
+  height: 80%;
+  margin: 0 auto;
+  
+}
+
+.card {
+  position: relative;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.card-content {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.price-tag {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  padding: 10px;
+  background-color: #f00;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 18px;
+  font-weight: bold;
+}
+.service {
+  padding: 80px 0;
+  background-color: #f9fafc;
+}
+
+.service-item {
+  background-color: #fff;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding-bottom: 15px;
+}
+
+.service-item__image {
+  position: relative;
+  flex-basis: 30%;
+  border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.service-item__image img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.price-tag {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #ef5350;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 50%;
+  font-size: 18px;
 }
 
 /* Meeting item column */
